--- a/carrier-infinity/docker-compose.yml
+++ b/carrier-infinity/docker-compose.yml
@@ -10,10 +10,12 @@ services:
       - 18181:8181
 
   infinitude:
-    image: nebulous/infinitude:latest
+#    image: nebulous/infinitude:latest
+#    image: nebulous/infinitude@sha256:fc53959f3df5a2f2eed9b67a94176d0ffb21c06de6901ad3d86b8571a44862dc
+    image: fc53959f3df5
     environment:
       - APP_SECRET=powerful
-      - PASS_REQS=300
+      - PASS_REQS=5
       - MODE=Development
     ports:
       - 18080:3000
@@ -23,3 +25,10 @@ services:
       context: ./homegrown
     ports:
       - 18080:8080
+
+  nanoproxy:
+    build:
+      context: ./nanoproxy
+    ports:
+      - 18080:8080
+
