--- a/cronjob/docker-compose.yml
+++ b/cronjob/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
 
   swarm-cronjob:
-    image: crazymax/swarm-cronjob
+    image: crazymax/swarm-cronjob:1.10.0
     environment:
       - TZ=America/New_York
       - LOG_LEVEL=info
