--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -16,10 +16,10 @@ metrics:
   prometheus: {}
 
 entrypoints:
-  dns-tcp:
-    address: :53/tcp
-  dns-udp:
-    address: :53/udp
+#  dns-tcp:
+#    address: :53/tcp
+#  dns-udp:
+#    address: :53/udp
   web:
     address: :80
   web-secure:
