--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -60,7 +60,8 @@ services:
   pihole-exporter:
     image: ekofr/pihole-exporter:v0.3.0
     environment:
-      - PIHOLE_HOSTNAME=pihole
+      - PIHOLE_HOSTNAME=192.168.42.11,192.168.42.12
+      - PIHOLE_PORT=8090
       - PIHOLE_PASSWORD=${PIHOLE_PASSWORD}
     deploy:
       labels:
