replace nfs volumes with local bind

--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -31,6 +31,6 @@ volumes:
   prometheus-data:
     driver: local
     driver_opts:
-      type: nfs4
-      o: addr=192.168.42.11,rw
-      device: ":/mnt/hdd/share/apps/prometheus"
+      type: none
+      o: bind
+      device: "/docker-data/apps/prometheus"
