--- a/grafana/docker-compose.yml
+++ b/grafana/docker-compose.yml
@@ -23,11 +23,11 @@ services:
 configs:
   grafana-ini:
     file: ./grafana.ini
-  
+
 volumes:
   grafana-data:
     driver: local
     driver_opts:
-      type: nfs4
-      o: addr=192.168.42.11,rw
-      device: ":/mnt/hdd/share/apps/grafana"
+      type: none
+      o: bind
+      device: "/docker-data/apps/grafana"
