--- a/infinitude/docker-compose.yml
+++ b/infinitude/docker-compose.yml
@@ -18,12 +18,19 @@ services:
       - MODE=Development
     volumes:
       - infinitude-data:/infinitude/state
+    deploy:
+      placement:
+        constraints:
+          - node.labels.arch == x86_64
 
   infinitude-prometheus:
     image: ghcr.io/jeremyhayes/infinitude-prometheus:v0.0.3
     environment:
       - INFINITUDE_BASE_URL=http://infinitude:3000
     deploy:
+      placement:
+        constraints:
+          - node.labels.arch == x86_64
       labels:
         - prometheus.swarm.enable=true
         - prometheus.swarm.port=8080
