--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       placement:
         constraints:
           - node.role == manager
+          - node.labels.arch == x86_64
       labels:
         - prometheus.swarm.enable=true
         - prometheus.swarm.port=8080
