--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.labels.arch == armv7l
+          - node.labels.arch == aarch64
       labels:
 #        - traefik.enable=true
         - traefik.http.routers.pihole.rule=Host(`pihole.lab.omglolwtfbbq.com`)
