--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -61,6 +61,9 @@ services:
       - PIHOLE_PORT=8090
       - PIHOLE_PASSWORD=${PIHOLE_PASSWORD}
     deploy:
+      placement:
+        constraints:
+          - node.labels.arch == aarch64
       labels:
         - prometheus.swarm.enable=true
         - prometheus.swarm.port=9617
