--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -70,7 +70,6 @@ scrape_configs:
     dockerswarm_sd_configs:
       - host: tcp://172.17.0.1:2375
         role: tasks
-        port: 3000
     relabel_configs:
       # only keep containers that should be running
       - source_labels:
@@ -82,11 +81,25 @@ scrape_configs:
           - __meta_dockerswarm_service_name
         regex: lab_mb8600-exporter
         action: keep
+      # capture ip of container on swarm network; use ip rather than dns for replicated tasks
+      - source_labels:
+          - __address__
+        target_label: __tmp_container_ip
+        regex: (.+):.+
+        replacement: $1
       # update address to account for port differences
       - source_labels:
-          - __meta_dockerswarm_service_name
+          - __tmp_container_ip
+          - __meta_dockerswarm_service_label_prometheus_swarm_port
         target_label: __address__
-        replacement: $1:3000
+        regex: (.+);(.+)
+        replacement: $1:$2
+      # capture the service itself as the "job" (so names are controlled by the stack config)
+      - source_labels:
+          - __meta_dockerswarm_service_name
+        target_label: job
+        regex: .+_(.+)
+        replacement: $1
       # capture the hostname of the running node
       - source_labels:
           - __meta_dockerswarm_node_hostname
