--- a/cadvisor/docker-compose.yml
+++ b/cadvisor/docker-compose.yml
@@ -3,9 +3,7 @@ version: '3.8'
 services:
 
   cadvisor:
-    # image: gcr.io/cadvisor/cadvisor:latest
-    # official image doesn't support arm
-    image: budry/cadvisor-arm:0.30.2
+    image: gcr.io/cadvisor/cadvisor:v0.45.0
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
@@ -13,11 +11,6 @@ services:
       - /var/lib/docker/:/var/lib/docker:ro
     deploy:
       mode: global
-      placement:
-        constraints:
-          - node.labels.arch == aarch64
       labels:
         - prometheus.swarm.enable=true
         - prometheus.swarm.port=8080
-
-# TODO add cadvisor for x86 hosts
