--- a/loki/promtail.yml
+++ b/loki/promtail.yml
@@ -9,36 +9,22 @@ clients:
   - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
-- job_name: containers
-  static_configs:
-  - targets:
-      - localhost
-    labels:
-      job: containerlogs
-      __path__: /var/lib/docker/containers/*/*log
-
-  pipeline_stages:
-  - json:
-      expressions:
-        output: log
-        stream: stream
-        attrs:
-  - json:
-      expressions:
-        tag:
-      source: attrs
-  - regex:
-      expression: (?P<image_name>(?:[^|]*[^|])).(?P<container_name>(?:[^|]*[^|])).(?P<image_id>(?:[^|]*[^|])).(?P<container_id>(?:[^|]*[^|]))
-      source: tag
-  - timestamp:
-      format: RFC3339Nano
-      source: time
-  - labels:
-      tag:
-      stream:
-      image_name:
-      container_name:
-      image_id:
-      container_id:
-  - output:
-      source: output
+  - job_name: swarm-tasks
+    docker_sd_configs:
+      - host: unix:///var/run/docker.sock
+    relabel_configs:
+      - source_labels:
+          - __meta_docker_container_id
+        target_label: container_id
+      - source_labels:
+          - __meta_docker_container_name
+        target_label: container_name
+      - source_labels:
+          - __meta_docker_container_log_stream
+        target_label: stream
+      # /lab_loki.1.jx2qvgkj28wxg84v7l3eyeplh -> loki
+      - source_labels:
+          - __meta_docker_container_name
+        regex: /([a-zA-Z0-9-]+)_([a-zA-Z0-9-]+)\..*
+        replacement: $2
+        target_label: job
