--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -59,6 +59,8 @@ services:
     environment:
       - PIHOLE_HOSTNAME=192.168.42.11
       - PIHOLE_PORT=8090
+      # pihole-exporter doesn't support docker secrets
+      # https://github.com/eko/pihole-exporter/issues/91
       - PIHOLE_PASSWORD=${PIHOLE_PASSWORD}
     deploy:
       placement:
