configure loki for unpoller
closes #198

--- a/unifi-poller/docker-compose.yml
+++ b/unifi-poller/docker-compose.yml
@@ -8,8 +8,23 @@ services:
       - UP_UNIFI_DEFAULT_URL=https://192.168.42.1:443
       - UP_UNIFI_DEFAULT_USER=unifi-poller
       - UP_UNIFI_DEFAULT_PASS=file:///run/secrets/unifi-password
-      - UP_INFLUXDB_DISABLE=true
+
+      # enable logging
+      - UP_UNIFI_DEFAULT_SAVE_IDS=true
+      - UP_UNIFI_DEFAULT_SAVE_EVENTS=true
+      - UP_UNIFI_DEFAULT_SAVE_ALARMS=true
+      - UP_UNIFI_DEFAULT_SAVE_ANOMOLIES=true
       - UP_UNIFI_DEFAULT_SAVE_DPI=true
+
+      # influxdb - unused
+      - UP_INFLUXDB_DISABLE=true
+
+      # prometheus
+      - UP_PROMETHEUS_DISABLE=false
+
+      # loki
+      - UP_LOKI_DISABLE=false
+      - UP_LOKI_URL=http://loki:3100
     secrets:
       - unifi-password
     deploy:
