--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -34,4 +34,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: "/docker-data/apps/prometheus"
+      device: "/opt/apps/prometheus"
