--- a/whoami/docker-compose.yml
+++ b/whoami/docker-compose.yml
@@ -5,6 +5,10 @@ services:
   whoami:
     image: traefik/whoami:v1.10.1
     deploy:
+      placement:
+        constraints:
+          - node.labels.arch == aarch64
+    deploy:
       labels:
         - traefik.enable=true
         - traefik.http.routers.whoami.rule=Host(`whoami.lab.omglolwtfbbq.com`)
