move media to nas mount

--- a/jellyfin/docker-compose.yml
+++ b/jellyfin/docker-compose.yml
@@ -52,4 +52,4 @@ volumes:
     driver_opts:
       type: 'none'
       o: 'bind'
-      device: '/opt/apps/jellyfin/media'
+      device: '/mnt/nas/media'
