--- a/jellyfin/docker-compose.yml
+++ b/jellyfin/docker-compose.yml
@@ -32,7 +32,12 @@ services:
         - traefik.http.routers.jellyfin.entrypoints=web-secure
         - traefik.http.routers.jellyfin.tls.certResolver=primary
         - traefik.http.routers.jellyfin.tls.domains[0].main=*.lab.omglolwtfbbq.com
+        - traefik.http.routers.jellyfin.service=jellyfin
         - traefik.http.services.jellyfin.loadbalancer.server.port=8096
+        - traefik.http.routers.jellyfin-http.rule=Host(`jellyfin.lab.omglolwtfbbq.com`) && Path(`/Library/Refresh`)
+        - traefik.http.routers.jellyfin-http.entrypoints=web
+        - traefik.http.routers.jellyfin-http.service=jellyfin-http
+        - traefik.http.services.jellyfin-http.loadbalancer.server.port=8096
 
 volumes:
   jellyfin-config:
