add tz to jellyfin so access schedule works

--- a/jellyfin/docker-compose.yml
+++ b/jellyfin/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - jellyfin-media:/media
     environment:
       - JELLYFIN_PublishedServerUrl=https://jellyfin.lab.omglolwtfbbq.com
+      - TZ=America/New_York
     deploy:
       placement:
         constraints:
