--- a/airgradient/docker-compose.yml
+++ b/airgradient/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.labels.arch == aarch64
+          - node.platform.arch == aarch64
       labels:
         - prometheus.swarm.enable=true
         - prometheus.swarm.port=5000
