--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       replicas: 3
       placement:
         constraints:
-          - node.labels.arch == aarch64
+          - node.platform.arch == aarch64
       labels:
 #        - traefik.enable=true
         - traefik.http.routers.pihole.rule=Host(`pihole.lab.omglolwtfbbq.com`)
@@ -67,7 +67,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.labels.arch == aarch64
+          - node.platform.arch == aarch64
       labels:
         - prometheus.swarm.enable=true
         - prometheus.swarm.port=9617
@@ -86,7 +86,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.labels.arch == aarch64
+          - node.platform.arch == aarch64
       restart_policy:
         condition: none
       replicas: 0 # none by default; created when cron hits
