--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -73,16 +73,18 @@ services:
         - prometheus.swarm.port=9617
 
   orbital-sync:
-    image: mattwebbio/orbital-sync:1.6.0
+    image: ghcr.io/mattwebbio/orbital-sync:1.7.0
     environment:
       - PRIMARY_HOST_BASE_URL=https://pihole1.lab.omglolwtfbbq.com
-      - PRIMARY_HOST_PASSWORD=${PIHOLE_PASSWORD}
-      - SECONDARY_HOST_1_BASE_URL=https://pihole2.lab.omglolwtfbbq.com
-      - SECONDARY_HOST_1_PASSWORD=${PIHOLE_PASSWORD}
-      - SECONDARY_HOST_2_BASE_URL=https://pihole3.lab.omglolwtfbbq.com
-      - SECONDARY_HOST_2_PASSWORD=${PIHOLE_PASSWORD}
+      - PRIMARY_HOST_PASSWORD_FILE=/run/secrets/pihole-web-password
+      - SECONDARY_HOSTS_1_BASE_URL=https://pihole2.lab.omglolwtfbbq.com
+      - SECONDARY_HOSTS_1_PASSWORD_FILE=/run/secrets/pihole-web-password
+      - SECONDARY_HOSTS_2_BASE_URL=https://pihole3.lab.omglolwtfbbq.com
+      - SECONDARY_HOSTS_2_PASSWORD_FILE=/run/secrets/pihole-web-password
       - TZ=America/New_York
       - RUN_ONCE=true
+    secrets:
+      - pihole-web-password
     deploy:
       placement:
         constraints:
