--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -7,6 +7,7 @@ api:
 providers:
   swarm:
     endpoint: "unix:///var/run/docker.sock"
+    exposedByDefault: false
   file:
     directory: /etc/traefik/config
     watch: true
