move postgres data volume to subfolder

--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -39,4 +39,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: "/opt/apps/postgres"
+      device: "/opt/apps/postgres/data"
