--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -14,6 +14,18 @@ services:
         constraints:
           - node.role == manager # for mapped data volume
 
+  valkey-exporter:
+    image: oliver006/redis_exporter:v1.61.0
+    environment:
+      - REDIS_ADDR=redis://valkey:6379
+    deploy:
+      placement:
+        constraints:
+          - node.platform.arch == aarch64
+      labels:
+        - prometheus.swarm.enable=true
+        - prometheus.swarm.port=9121
+
 volumes:
   valkey-data:
     driver: local
