--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -47,6 +47,13 @@ services:
         - traefik.http.routers.authentik.tls.certResolver=primary
         - traefik.http.routers.authentik.tls.domains[0].main=*.lab.omglolwtfbbq.com
         - traefik.http.services.authentik.loadbalancer.server.port=9000
+        # authentik-proxy is a separate router for the embedded outpost
+        - traefik.http.routers.authentik-proxy.rule=HostRegexp(`^.+\.lab\.omglolwtfbbq\.com$$`) && PathPrefix(`/outpost.goauthentik.io/`)
+        - traefik.http.routers.authentik-proxy.priority=1
+        - traefik.http.routers.authentik-proxy.entrypoints=web
+        - traefik.http.middlewares.proxy-auth.forwardauth.address=http://authentik-server:9000/outpost.goauthentik.io/auth/traefik
+        - traefik.http.middlewares.proxy-auth.forwardauth.trustForwardHeader=true
+        - traefik.http.middlewares.proxy-auth.forwardauth.authResponseHeaders=X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid,X-authentik-jwt,X-authentik-meta-jwks,X-authentik-meta-outpost,X-authentik-meta-provider,X-authentik-meta-app,X-authentik-meta-version
 
   authentik-worker:
     image: ghcr.io/goauthentik/server:2024.6.0
