--- a/whoami/docker-compose.yml
+++ b/whoami/docker-compose.yml
@@ -15,3 +15,4 @@ services:
         - traefik.http.routers.whoami.tls.certResolver=primary
         - traefik.http.routers.whoami.tls.domains[0].main=*.lab.omglolwtfbbq.com
         - traefik.http.services.whoami.loadbalancer.server.port=80
+        - traefik.http.routers.whoami.middlewares=proxy-auth@swarm
