add swarm visualizer to proxy auth

--- a/visualizer/docker-compose.yml
+++ b/visualizer/docker-compose.yml
@@ -10,11 +10,11 @@ services:
       placement:
         constraints:
           - node.role == manager
-          - node.platform.arch == x86_64 # only because manager node req
       labels:
         - traefik.enable=true
         - traefik.http.routers.visualizer.rule=Host(`visualizer.lab.omglolwtfbbq.com`)
         - traefik.http.routers.visualizer.entrypoints=web-secure
         - traefik.http.routers.visualizer.tls.certResolver=primary
         - traefik.http.routers.visualizer.tls.domains[0].main=*.lab.omglolwtfbbq.com
+        - traefik.http.routers.visualizer.middlewares=proxy-auth@swarm
         - traefik.http.services.visualizer.loadbalancer.server.port=8080
