--- a/apps/jellyfin/docker-compose.yml
+++ b/apps/jellyfin/docker-compose.yml
@@ -40,6 +40,45 @@ services:
         - traefik.http.routers.jellyfin-refresh.service=jellyfin-refresh
         - traefik.http.services.jellyfin-refresh.loadbalancer.server.port=8096
 
+  jellyfin-backup:
+    image: alpinelinux/docker-cli@sha256:8115595554b55626fa8ddd4d82650de5dc8c9c1ef1d60f4b39e69182bf16419b
+    entrypoint: "sh -c"
+    command: |
+      '
+      TIMESTAMP=$$(date +"%Y-%m-%d_%H-%M-%S")
+      OUTFILE="/opt/backups/config_$$TIMESTAMP.tar.gz"
+
+      echo "Stopping jellyfin service..."
+      docker service scale $$SERVICE_NAME=0 > /dev/null
+
+      echo "Backing up jellyfin config to '$$OUTFILE'..."
+      tar -cpzf "$$OUTFILE" -C /opt/config .
+
+      echo "Deleting backups older than 30 days..."
+      find /opt/backups -name "config_*.tar.gz" -type -f -mtime +30 -print -delete
+
+      echo "Starting jellyfin service..."
+      docker service scale $$SERVICE_NAME=1 > /dev/null
+      '
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - jellyfin-config:/opt/config
+      - jellyfin-backups:/opt/backups
+    environment:
+      # assumes this is deployed to a stack named "lab"
+      - SERVICE_NAME=lab_jellyfin
+    deploy:
+      placement:
+        constraints:
+          - node.role == manager
+      restart_policy:
+        condition: none
+      replicas: 0 # none by default; created when cron hits
+      labels:
+        # backup and restart Tuesdays at 3am
+        - swarm.cronjob.enable=true
+        - swarm.cronjob.schedule=0 3 * * TUE
+
 volumes:
   jellyfin-config:
     driver: local
@@ -53,6 +92,12 @@ volumes:
       type: 'none'
       o: 'bind'
       device: '/opt/apps/jellyfin/cache'
+  jellyfin-backups:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/opt/apps/jellyfin/backups'
   jellyfin-media:
     driver: local
     driver_opts:
